# mei-godot

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TODO.md  build-all.sh  export_presets.cfg  galaxy.gd  galaxy.tscn  generator_config.toml  main.gd  main.gd.uid  main.tscn  mei.gdextension  mei.gdextension.uid  mei_utils.gd  openxr_action_map.tres  project.godot  system.gd  system.tscn
.cargo/: config.toml.example
.github/workflows/: release.yml
flatpak/: com.palodequeso.MeiGalaxyViewer.desktop  com.palodequeso.MeiGalaxyViewer.metainfo.xml  com.palodequeso.MeiGalaxyViewer.yml
mei-godot/: Cargo.toml
mei-godot/src/: galaxy.rs  lib.rs
objects/: belt_orbit_material.tres  crosshair.tscn  orbit_material.tres  selection_marker.tscn  system_moon.gd  system_moon.tscn  system_planet.gd.uid  system_planet.tscn  system_star.gd  system_star.tscn
resources/: scifi_theme.tres
scenes/: galaxy.tscn  main.tscn  system.tscn
scenes/objects/: system_moon.tscn  system_planet.tscn  system_star.tscn
scripts/: build-appimage.sh  build-flatpak.sh
src/: galaxy.gd.uid  main.gd  mei_utils.gd  mei_utils.gd.uid  system.gd  system.gd.uid
src/objects/: system_moon.gd  system_moon.gd.uid  system_planet.gd  system_star.gd  system_star.gd.uid
